fix: spacing (of own/person messaging) is now right/left aligned respectively

--- a/src/app/tasks/task-comments-viewer/task-comments-viewer.component.scss
+++ b/src/app/tasks/task-comments-viewer/task-comments-viewer.component.scss
@@ -73,6 +73,13 @@ $comment-inner-border-radius: 4px;
     text-align: center;
     width: 100%;
     margin-bottom: 0;
+    text-align: left;
+    padding-left: 40px;
+
+    &.own {
+      text-align: right;
+      padding-right: 10px;
+    }
   }
 
   .comments-body {
